--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "eslint": "^8.4.1",
     "nodemon": "^2.0.15",
     "prisma": "^3.6.0"
   }
